--- a/src/app/shared/track-table/track-table.component.html
+++ b/src/app/shared/track-table/track-table.component.html
@@ -172,10 +172,16 @@
 </td>
 </tr>
 }
+@loading {
+  <app-loading></app-loading>
+}
 @placeholder {
-<app-loading></app-loading>
+  <div class="placeholder">
+    
+  </div>
 }
 }
+
 
 </tbody>
 </table>
