--- a/src/app/user/following/following.component.html
+++ b/src/app/user/following/following.component.html
@@ -7,5 +7,7 @@
         <a routerLinkActive="active" routerLink="/artists/{{artist.id}}">{{artist.name}}</a>
       </div>
     </div>
+  } @empty {
+    Follow artists to see them here
   }
 </div>
