--- a/src/styles.scss
+++ b/src/styles.scss
@@ -538,3 +538,8 @@ input[type=email], input[type=password], input[type=text], textarea{
 .hovered-row{
   border: 2px solid blue !important;
 }
+.center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
