--- a/src/app/artists/artist-round-card/artist-round-card.component.html
+++ b/src/app/artists/artist-round-card/artist-round-card.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/artists/{{artist.id}}" class="card">
+<a routerLink="/artists/{{artist.id}}" class="card" (contextmenu)="openContextMenu($event)">
   <img src="{{artist.cover}}"/>
   <p>{{artist.name}}</p>
 </a>
