add selected tracks to playlist dialog confirmation

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -543,3 +543,6 @@ input[type=email], input[type=password], input[type=text], textarea{
   align-items: center;
   justify-content: center;
 }
+.white{
+  color: var(--light) !important;
+}
