--- a/src/app/shared/track-table/track-table.component.html
+++ b/src/app/shared/track-table/track-table.component.html
@@ -19,10 +19,10 @@
     </thead>
   }
   <tbody cdkDropList class="list" (cdkDropListDropped)="drop($event)" cdkDropListSortingDisabled>
-    @for (track of tracks; track trackById(index, track); let index = $index) {
+    @for (track of tracks; track track; let index = $index) {
       @defer(on viewport){
       <tr cdkDrag (cdkDragDropped)="onDragDropped($event)" (cdkDragStarted)="onDragStarted($event)" class="item"
-        [ngClass]="{'selected' : selectedTracks.has(track.id)}" (click)="selectTrack($event, track.id,track)"
+        [ngClass]="{'selected' : selectedTracks.has(index)}" (click)="selectTrack($event, index,track)"
         (contextmenu)="openMenuOnRightClick($event, track)" (dblclick)="playAllFromIndex(tracks, index, from)">
         @if (selectedTracks.size > 0) {
           <p *cdkDragPreview class="preview">{{selectedTracks.size}} tracks selected</p>
@@ -65,7 +65,7 @@
         </div>
         <div class="artists">
           <a routerLink="/artists/{{track.owner.id}}">{{track.owner.name}}</a>@if (track.features.length > 0) {
-          @for (feature of track.features; track trackById(index, feature); let index = $index) {
+          @for (feature of track.features; track feature.id; let index = $index) {
             , <a
           routerLink="/artists/{{feature.id}}">{{feature.name}}</a>
         }
@@ -164,7 +164,7 @@
   </mat-menu>
   <mat-menu #playlist="matMenu">
     <ng-template matMenuContent>
-      @for (playlist of playlists; track trackById($index, playlist)) {
+      @for (playlist of playlists; track playlist) {
         <button mat-menu-item (click)="addTrackToPlaylist(track.id, playlist.id)">{{playlist.title}}</button>
       }
     </ng-template>
