--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,14 @@
-
-
-@if (loading) {
-  <app-loading></app-loading>
-} @else {
+@if (loadedRecently) {
   <div class="container">
     <h1>Recently played</h1>
     <div class="cards">
       <app-track-table [tracks]="recentTracks" [from]="from"></app-track-table>
     </div>
   </div>
+}
+@if (loading) {
+  <app-loading></app-loading>
+} @else {
   <div class="container">
     <h1>Latest albums added</h1>
     <div class="cards">
