improve current track info

--- a/src/app/artists/artist-detail/artist-detail.component.html
+++ b/src/app/artists/artist-detail/artist-detail.component.html
@@ -16,7 +16,7 @@
                 <img src="assets/icons-svg/plus.svg" alt="plus,icon"/>
               Follow</button>
             }
-            @if (isFollowing) {
+            @else {
               <button (click)="unfollowArtist(artist)">
                 <img src="assets/icons-svg/check.svg" alt="check,icon"/>
               Following</button>
