--- a/src/app/shared/track-table/track-table.component.scss
+++ b/src/app/shared/track-table/track-table.component.scss
@@ -42,6 +42,7 @@ table{
           .play{
             opacity: 1;
           }
+
           .image{
             opacity: .5;
           }
@@ -195,6 +196,7 @@ table{
 }
 .playing{
   color: var(--main-color);
+  font-weight: bold;
 }
 .playing-img{
   color: var(--main-color);
@@ -255,4 +257,7 @@ table{
 .placeholder{
 
   background-color: var(--secondary-black);
+}
+.opacity-05{
+  opacity: .5;
 }
