signals,firebase,snackbar,pipes update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-sidenav></app-sidenav>
-@if ((queueService.currentTrack$ | async)?.id) {
+@if (queueService.currentTrackInfo()) {
   <div class="player" [@slideInOut]="'in'">
     <app-player ></app-player>
   </div>
