fix subscriptions and subjects

--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -11,7 +11,7 @@
         <div class="row">
           <p>{{user.following_count}} Following</p>
           <div class="divider-h"></div>
-          <p>{{user.playlists_count}} Playlists</p>
+          <p>{{playlists.length}} Playlists</p>
         </div>
       </div>
     </div>
