--- a/src/app/playlists/playlist-detail/playlist-detail.component.html
+++ b/src/app/playlists/playlist-detail/playlist-detail.component.html
@@ -1,26 +1,26 @@
 
-@if (isLoaded) {
+@if (this.playlist() !== null) {
   <div class="playlist" #background>
     <div class="top">
       <div class="image-info">
         <div class="image">
-          @if (playlist.image_url) {
-            <img src="{{playlist.image_url}}" alt="cover, playlist">
+          @if (this.playlist()!.image_url) {
+            <img src="{{playlist()!.image_url}}" alt="cover, playlist">
           } @else {
             <img class="note" src="assets/icons-svg/note.svg"  alt="icon, note">
           }
         </div>
         <div class="info">
-          <h1>{{playlist.title}}</h1>
-          <p>{{playlist.tracks_count}} tracks</p>
-          @if (playlist.description) {
-            <p class="desc">{{playlist.description}}</p>
+          <h1>{{playlist()!.title}}</h1>
+          <p>{{playlistService.trackCount()}} tracks</p>
+          @if (playlist()!.description) {
+            <p class="desc">{{playlist()!.description}}</p>
           }
-          <p>Last updated {{playlist.latest_added | humanizeDate}}</p>
+          <p>Last updated {{playlist()!.latest_added | humanizeDate}}</p>
           <p>{{playlistService.totalDuration() | formatDuration}}</p>
         </div>
       </div>
-      @if (playlist.tracks_count > 0) {
+      @if (playlist()!.tracks_count > 0) {
         <div class="actions">
           <div class="left">
             <button class="play">
@@ -46,9 +46,9 @@
 
 
 @if (isLoaded) {
-  @if (playlist.tracks_count > 0) {
+  @if ((playlistService.tracks$ | async)?.length) {
     <div class="table">
-      <app-track-table [tracks]="playlist.tracks.data" [from]="fromInfo"></app-track-table>
+      <app-track-table [tracks]="(playlistService.tracks$ | async)!" [from]="fromInfo"></app-track-table>
     </div>
   } @else {
     <div class="no-tracks">
