--- a/src/app/user/playlists/playlists.component.html
+++ b/src/app/user/playlists/playlists.component.html
@@ -7,12 +7,12 @@
       </div>
       <div class="cards">
         @if (filtered.length > 0) {
-          @for (playlist of filtered; track trackById($index, playlist)) {
+          @for (playlist of filtered; track playlist.id) {
             <app-playlist-card [playlist]="playlist"></app-playlist-card>
           }
         }
         @if (filtered.length == 0 && !query.value.length) {
-          @for (playlist of playlists; track trackById($index, playlist)) {
+          @for (playlist of playlists; track playlist.id) {
             <app-playlist-card [playlist]="playlist"></app-playlist-card>
           }
         }
